--- a/package.json
+++ b/package.json
@@ -25,14 +25,17 @@
 		"build"
 	],
 	"devDependencies": {
+		"@ckeditor/ckeditor5-alignment": "^11.2.0",
+		"@ckeditor/ckeditor5-font": "^11.2.2",
+		"@ckeditor/ckeditor5-highlight": "^11.0.5",
 		"@ckeditor/ckeditor5-adapter-ckfinder": "^11.0.5",
 		"@ckeditor/ckeditor5-autoformat": "^11.0.5",
 		"@ckeditor/ckeditor5-basic-styles": "^11.1.4",
 		"@ckeditor/ckeditor5-block-quote": "^11.1.3",
 		"@ckeditor/ckeditor5-ckfinder": "^11.0.5",
 		"@ckeditor/ckeditor5-core": "^12.3.0",
-		"@ckeditor/ckeditor5-dev-utils": "^12.0.0",
-		"@ckeditor/ckeditor5-dev-webpack-plugin": "^8.0.0",
+		"@ckeditor/ckeditor5-dev-utils": "^12.0.5",
+		"@ckeditor/ckeditor5-dev-webpack-plugin": "^8.0.5",
 		"@ckeditor/ckeditor5-easy-image": "^11.0.5",
 		"@ckeditor/ckeditor5-editor-classic": "^12.1.4",
 		"@ckeditor/ckeditor5-essentials": "^11.0.5",
@@ -54,8 +57,8 @@
 		"raw-loader": "^3.1.0",
 		"style-loader": "^1.0.0",
 		"uglifyjs-webpack-plugin": "^1.3.0",
-		"webpack": "^4.39.1",
-		"webpack-cli": "^3.3.6"
+		"webpack": "^4.40.2",
+		"webpack-cli": "^3.3.9"
 	},
 	"engines": {
 		"node": ">=8.0.0",
@@ -77,7 +80,7 @@
 	},
 	"lint-staged": {
 		"**/*.js": [
-			"eslint --quiet"
+			"eslint --quiet --fix"
 		]
 	},
 	"eslintIgnore": [
